5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4515/executions/1643_2445.log
== TEST (2019-04-15 15:12:59) 
-- CODE:
tipograu = input("Informe a conversap (C)-Celsius ou (F)-Fahrenheit : ")
valor = float(input("Valor a ser convertido :"))

if(tipograu.upper() == 'F'):
	convertido = (5/9)*(valor-32)
else:
if(tipograu.upper() == 'C'):
	convertido = (9/5)*(valor+32)
-- ERROR:
File "XXXX", line 7
    if(tipograu.upper() == 'C'):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:13:12) 
-- CODE:
tipograu = input("Informe a conversap (C)-Celsius ou (F)-Fahrenheit : ")
valor = float(input("Valor a ser convertido :"))

if(tipograu.upper() == 'F'):
	convertido = (5/9)*(valor-32)
if(tipograu.upper() == 'C'):
	convertido = (9/5)*(valor+32)
-- ERROR:
File "XXXX", line 7
    if(tipograu.upper() == 'C'):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:00) 
-- CODE:
tipograu = input("Informe a conversap (C)-Celsius ou (F)-Fahrenheit : ")
valor = float(input("Valor a ser convertido :"))

if(tipograu.upper() == 'F'):
	convertido = (5/9)*(valor-32)
if(tipograu.upper() == 'C'):
	convertido = (9/5)*(valor+32)
print(round(convertido,2))	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:14:15) 
-- CODE:
tipograu = input("Informe a conversap (C)-Celsius ou (F)-Fahrenheit : ")
valor = float(input("Valor a ser convertido :"))

if(tipograu.upper() == 'F'):
	convertido = (5/9)*(valor-32)
if(tipograu.upper() == 'C'):
	convertido = (9/5)*(valor+32)
print(round(convertido,2))	
-- EXECUTION TIME:
0.199234
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:15:05) 
-- CODE:
tipograu = input("Informe a conversap (C)-Celsius ou (F)-Fahrenheit : ")
valor = float(input("Valor a ser convertido :"))

if(tipograu.upper() == 'F'):
	convertido = (5/9)*(valor-32)
if(tipograu.upper() == 'C'):
	convertido = (9/5)*(valor+32)
print(round(convertido,2))	
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:16) 
-- CODE:
tipograu = input("Informe a conversap (C)-Celsius ou (F)-Fahrenheit : ")
valor = float(input("Valor a ser convertido :"))

if(tipograu.upper() == 'F'):
	convertido = (5/9)*(valor-32)
if(tipograu.upper() == 'C'):
	convertido = ((9/5)*valor)+32
print(round(convertido,2))	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:16:36) 
-- CODE:
tipograu = input("Informe a conversap (C)-Celsius ou (F)-Fahrenheit : ")
valor = float(input("Valor a ser convertido :"))

if(tipograu.upper() == 'F'):
	convertido = (5/9)*(valor-32)
if(tipograu.upper() == 'C'):
	convertido = ((9/5)*valor)+32
print(round(convertido,2))	
-- EXECUTION TIME:
0.146489
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
